--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
       property="og:image"
       content="https://hamzahxou.github.io/src/img/logo/thumbnail.png"
     />
-    <meta property="og:url" content="https://hamzahxou.github.io/" />
 
-    <title>Hamzahxou</title>
+    <title>Rayhan77</title>
     <link rel="icon" type="image/png" href="src/img/logo/favicon.ico" />
     <link rel="stylesheet" href="./src/style/global.css" />
   </head>
@@ -28,7 +27,7 @@
     <header id="top">
       <div class="logo">
         <h1>
-          <a href="#">&lt; <span>Hamzahxou</span> /&gt;</a>
+          <a href="#">&lt; <span>Rayhan77</span> /&gt;</a>
         </h1>
       </div>
       <div class="title">
@@ -68,7 +67,7 @@
           <h2>About</h2>
           <div class="Des">
             <p>
-              Halo, nama saya Hamzah. Saya seorang pelajar SMK jurusan PPLG.
+              Halo, nama saya Raihan Adhie Nugroho. Saya seorang pelajar SMK jurusan PPLG.
               Bidang minat saya adalah Web dan Game Developer, saya Bercita-cita
               ingin membantu dalam pembangunan dunia yang modern akan teknologi
             </p>
@@ -85,10 +84,10 @@
 
             <address>
               Email:
-              <a href="mailto:hamzahxou@gmail.com"> hamzahxou@gmail.com</a>
+              <a href="mailto:raihanadhienugroho@gmail.com"> anonymous@gmail.com</a>
             </address>
             <p class="sosialMedia">
-              Whatsapp: <a href="https:wa.me/6285336889508"> +6285336889508</a>
+              Whatsapp: <a href="https:wa.me/6281225825786"> +6281225825786</a>
             </p>
           </div>
         </div>
@@ -119,7 +118,7 @@
       </section>
     </main>
     <footer>
-      <p>copyright &copy; 2023 -</p>
+      <p>copyright &copy; 2024 -</p>
       <p>All Right Reserved</p>
     </footer>
     <script src="./src/js/kucing.js"></script>
